front end bootstrapping and api updates
